example/secondfile/objects/SP_Account_Ticket__c.object
<CustomObject>
    <description>Service Assurance Tickets</description>
    <fields>
        <fullName>AOTS_Ticket_State__c</fullName>
        <label>AOTS Ticket State </label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Id__c</fullName>
        <label>Asset Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BVOIP_Indicator__c</fullName>
        <label>BVOIP Indicator</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Risk__c</fullName>
        <label>Business Risk</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Id__c</fullName>
        <label>Change Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Status__c</fullName>
        <label>Change Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Id__c</fullName>
        <label>Claim Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Link__c</fullName>
        <label>Claim Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Claim_Request_Date__c</fullName>
        <label>Claim Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Submitter_Email__c</fullName>
        <label>Claim Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Claim_Submitter_Name__c</fullName>
        <label>Claim Submitter Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Submitter_Phone__c</fullName>
        <label>Claim Submitter Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Claim_Submitter__c</fullName>
        <label>Claim Submitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Amont__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Percent__c</fullName>
        <label>Credit Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Impact_Description__c</fullName>
        <label>Customer Impact Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Customer_Id__c</fullName>
        <label>End Customer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_TZ__c</fullName>
        <label>End TZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Id__c</fullName>
        <label>End User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Phone__c</fullName>
        <label>End User Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Currency_Code__c</fullName>
        <label>ISO Currency Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Used__c</fullName>
        <label>Identifier Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Last Refresh Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Month__c</fullName>
        <label>Reporting Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SP Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SP Account Tickets</relationshipLabel>
        <relationshipName>SP_Account_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_TZ__c</fullName>
        <label>Start TZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_URL__c</fullName>
        <label>Ticket URL</label>
        <type>Url</type>
    </fields>
    <label>SP Account Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>Severity__c</columns>
        <columns>AOTS_Ticket_State__c</columns>
        <columns>NAME</columns>
        <columns>Ticket_URL__c</columns>
        <columns>Asset_Id__c</columns>
        <columns>Problem_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AOTS_Ticket_State__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>SP Account Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SP Account Tickets</pluralLabel>
    <recordTypes>
        <fullName>AOTSCM</fullName>
        <active>true</active>
        <label>AOTSCM</label>
    </recordTypes>
    <recordTypes>
        <fullName>AOTSTM</fullName>
        <active>true</active>
        <label>AOTSTM</label>
    </recordTypes>
    <recordTypes>
        <fullName>ISOM</fullName>
        <active>true</active>
        <label>ISOM</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>